# risk_modelling_with_GenAI

./: app.py  architecture.md  pyproject.toml  requirements.txt  setup  visualisation.py
data/extraction_results/: extraction_20260215_003635.json
risk_engine/core/: schema.py  state.py
risk_engine/graphs/: main_graph.py
risk_engine/nodes/: aloe.py  aloe_links.py  aloe_vulnerabilities.py  contextualise.py  extraction.py  human_edit_feedback.py  llm_editor.py  risk_identification.py
risk_engine/services/: llama_parse_services.py  llm_client.py
risk_engine/tests/: test_extraction.py
ui/: page_viewer.py
