[tool.poetry]
name = "risk-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "risk_engine"}]  

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "^0.3.0"
langgraph = "^0.2.0"
pydantic = "^2.0.0"
llama-parse = "*"
llama-index = "*"
python-dotenv = "*"
nest-asyncio = "*"